--- a/painogen/privat/scss/style.scss
+++ b/painogen/privat/scss/style.scss
@@ -253,7 +253,6 @@ header {
 }
 
 
-
   
 
 
@@ -1683,11 +1682,22 @@ margin-top: 30px;
         margin-top: 63px;
         text-align: right;
         padding: 0;
+
+        @media only screen and (max-width: 992px) {
+          text-align: left;
+         
+        }
       }
       a:nth-child(4){
         display: block;
         text-align: right;
+
+        @media only screen and (max-width: 992px) {
+          text-align: left;
+         
+        }
       }
+      
     }
 
   .instagram_img {
