--- a/painogen/scss/style.css
+++ b/painogen/scss/style.css
@@ -12,7 +12,7 @@
   src: url("../fonts/poppins/Poppins-SemiBold.otf"); }
 @font-face {
   font-family: poppinsRegular;
-  src: url("../fonts/poppins/Poppins-Regular.otf"); }
+  src: url("../fonts/poppins/Poppins-Light.otf"); }
 @font-face {
   font-family: poppinsMedium;
   src: url("../fonts/poppins/Poppins-Medium.otf"); }
@@ -30,7 +30,7 @@
   text-align: center; }
 
 /*btn*/
-.sameBTN, #shopBTN, #shopBTN_2, #shopBTN_3 {
+.sameBTN, #shopBTN {
   width: 11rem;
   height: 3.5rem; }
 
@@ -69,12 +69,8 @@ body {
   height: 25px;
   /* margin: 50px auto;*/
   -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
   transform: rotate(0deg);
   -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
   transition: .5s ease-in-out;
   cursor: pointer; }
 
@@ -88,12 +84,8 @@ body {
   opacity: 1;
   left: 0;
   -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
   transform: rotate(0deg);
   -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
   transition: .25s ease-in-out; }
 
 #nav-icon1 span:nth-child(1) {
@@ -108,8 +100,6 @@ body {
 #nav-icon1.open span:nth-child(1) {
   top: 18px;
   -webkit-transform: rotate(135deg);
-  -moz-transform: rotate(135deg);
-  -o-transform: rotate(135deg);
   transform: rotate(135deg); }
 
 #nav-icon1.open span:nth-child(2) {
@@ -119,8 +109,6 @@ body {
 #nav-icon1.open span:nth-child(3) {
   top: 18px;
   -webkit-transform: rotate(-135deg);
-  -moz-transform: rotate(-135deg);
-  -o-transform: rotate(-135deg);
   transform: rotate(-135deg); }
 
 /*my styles head*/
@@ -132,6 +120,7 @@ header {
 #headNav {
   padding-bottom: 34px;
   padding-top: 28px;
+  -webkit-transition: all 1s linear;
   transition: all 1s linear; }
 
 #headMenu {
@@ -173,8 +162,6 @@ header {
   height: 40px;
   border-radius: 50%;
   overflow: auto;
-  -moz-transition: all .3s linear;
-  -o-transition: all .3s linear;
   -webkit-transition: all .3s linear;
   transition: all .3s linear; }
   .headerIconeDiv img {
@@ -183,7 +170,8 @@ header {
     margin-top: 30%; }
   .headerIconeDiv:hover {
     background: #ffffff;
-    box-shadow: 0px 0px 11px -2px #686161; }
+    -webkit-box-shadow: 0px 0px 11px -2px #686161;
+            box-shadow: 0px 0px 11px -2px #686161; }
 
 /*Slider*/
 #section_1 {
@@ -262,17 +250,32 @@ header {
         left: 37%; } }
 
 .top_slid_text_content {
-  animation: animationFramesW linear 1s;
-  animation-iteration-count: 1;
-  transform-origin: 50% 50%; }
+  -webkit-animation: animationFramesW linear 1s;
+          animation: animationFramesW linear 1s;
+  -webkit-animation-iteration-count: 1;
+          animation-iteration-count: 1;
+  -webkit-transform-origin: 50% 50%;
+          transform-origin: 50% 50%; }
+
+@-webkit-keyframes animationFramesW {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate(-49px, 0px);
+            transform: translate(-49px, 0px); }
+  100% {
+    opacity: 1;
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px); } }
 
 @keyframes animationFramesW {
   0% {
     opacity: 0;
-    transform: translate(-49px, 0px); }
+    -webkit-transform: translate(-49px, 0px);
+            transform: translate(-49px, 0px); }
   100% {
     opacity: 1;
-    transform: translate(0px, 0px); } }
+    -webkit-transform: translate(0px, 0px);
+            transform: translate(0px, 0px); } }
 /*...... Out backgroun IMG 1......*/
 .bgCoIMG img {
   position: absolute; }
@@ -295,19 +298,14 @@ header {
 #section_2 {
   margin-top: 235px; }
 
-.textHeader {
-  width: 57.82208588957055%; }
-  @media only screen and (max-width: 991px) {
-    .textHeader h2 {
-      font-size: 22px; } }
+.content_img_part_section_2 {
+  position: relative; }
+  .content_img_part_section_2 img {
+    position: absolute;
+    left: -36%; }
 
-.textContent {
-  width: 87.42331288343558%;
-  margin-top: 30px;
-  line-height: 28px; }
-  @media only screen and (max-width: 991px) {
-    .textContent p {
-      font-size: 15px; } }
+.content_textHeader_part_section_2 {
+  width: 59%; }
 
 .infoIcon {
   margin-top: 70px;
@@ -319,15 +317,6 @@ header {
 
 .section2_part1 {
   position: relative; }
-  .section2_part1 img {
-    position: absolute;
-    left: -35.648%; }
-    @media only screen and (max-width: 1650px) {
-      .section2_part1 img {
-        left: -4.5%; } }
-    @media only screen and (max-width: 1455px) {
-      .section2_part1 img {
-        position: static; } }
 
 .section2_part2 {
   padding-left: 6.72%; }
@@ -357,13 +346,23 @@ header {
 #section_3 {
   margin-top: 70px; }
 
-.textHeader_section_3 {
-  margin-top: 70px; }
+.content_textHeader_part_section_3 {
+  width: 48%; }
+  .content_textHeader_part_section_3 h2 {
+    font-family: "poppinsRegular";
+    font-size: 30px;
+    color: #262a2c;
+    margin: 0;
+    text-transform: uppercase;
+    font-weight: bold;
+    line-height: 42px; }
 
-.textContSection_3 {
-  width: 76.960289%; }
-  .textContSection_3 p {
-    line-height: 28px; }
+.content_text_part_section_3 p {
+  font-family: "poppinsRegular";
+  font-size: 18px;
+  color: #626262;
+  letter-spacing: 1px;
+  line-height: 36px; }
 
 #videoBlock {
   width: 100%;
@@ -382,6 +381,7 @@ header {
   outline: none;
   border: none;
   cursor: pointer;
+  -webkit-transition: 0.3s;
   transition: 0.3s; }
   #btnPlay img {
     width: 29.46428571428571%;
@@ -391,10 +391,12 @@ header {
     margin-left: 40%; }
 
 #btnPlay:hover {
-  box-shadow: 0px 0px 40px -4px #8a8d8b; }
+  -webkit-box-shadow: 0px 0px 40px -4px #8a8d8b;
+          box-shadow: 0px 0px 40px -4px #8a8d8b; }
 
 #btnPlay:active {
-  box-shadow: 0px 1px 4px -1px;
+  -webkit-box-shadow: 0px 1px 4px -1px;
+          box-shadow: 0px 1px 4px -1px;
   background: #fff9f9e0; }
   #btnPlay:active img {
     width: 29%; }
@@ -408,23 +410,70 @@ header {
     .parallax_2 {
       display: none; } }
 
-/* ........section 4.............*/
-@media only screen and (max-width: 767px) {
-  #section_4 {
-    margin-top: 100px; } }
+/*............... ........section 4........................*/
+.content_textHeader_part h2 {
+  font-family: "poppinsRegular";
+  font-size: 30px;
+  color: #262a2c;
+  margin: 0;
+  text-transform: uppercase;
+  font-weight: bold;
+  line-height: 42px; }
+@media only screen and (max-width: 1600px) {
+  .content_textHeader_part {
+    font-family: "poppinsRegular";
+    font-size: 20px;
+    color: #262a2c;
+    margin: 0;
+    text-transform: uppercase;
+    font-weight: bold;
+    line-height: 33px; } }
 
-.textHeader_section_4 {
-  margin-top: 106px; }
+.content_text_part p {
+  font-family: "poppinsRegular";
+  font-size: 18px;
+  color: #626262;
+  letter-spacing: 1px;
+  line-height: 36px; }
+@media only screen and (max-width: 1600px) {
+  .content_text_part {
+    font-family: "poppinsRegular";
+    font-size: 15px;
+    color: #626262;
+    letter-spacing: 1px;
+    line-height: 26px; } }
 
-.img_section_4 img {
-  /* width: 100%;*/
-  margin-left: -12%; }
+.greenLine {
+  width: 80px;
+  height: 2px;
+  background-color: #2b9100;
+  margin-top: 29px;
+  margin-bottom: 29px; }
+  @media only screen and (max-width: 1600px) {
+    .greenLine {
+      margin-top: 16px;
+      margin-bottom: 16px; } }
 
-#shopBTN_2 {
+.btnStyle {
+  width: 11rem;
+  height: 3.5rem;
   font-family: "kariaBold";
   font-size: 20.77px;
   color: #ffffff;
-  margin-top: 21px; }
+  margin-top: 21px;
+  display: block; }
+  @media only screen and (max-width: 1600px) {
+    .btnStyle {
+      width: 9rem;
+      height: 3rem; } }
+
+.content_textHeader_part_1 {
+  width: 61.48282097649186%;
+  margin-top: 103px; }
+  @media only screen and (max-width: 1600px) {
+    .content_textHeader_part_1 {
+      width: 93.482821%;
+      margin-top: 74px; } }
 
 /*............paralax 3 img ..........*/
 .parallax_3 {
@@ -445,22 +494,23 @@ header {
     .parallax_3 {
       display: none; } }
 
-/*...... Section 5 ......*/
-@media only screen and (max-width: 1199px) {
-  #section_5 {
-    margin-top: 70px; } }
-@media only screen and (max-width: 767px) {
-  #section_5 {
-    margin-top: -78px; } }
+@media only screen and (max-width: 1600px) {
+  #section_4_block {
+    width: 825px; } }
 
-.textHeader_section_5 {
-  margin-top: 175px; }
+.content_textHeader_part_2 {
+  margin-top: 175px;
+  width: 43%; }
+  @media only screen and (max-width: 1600px) {
+    .content_textHeader_part_2 {
+      margin-top: 117px;
+      width: 43%; } }
 
-.textHeader_section_5 {
-  width: 45.86994727592267%; }
-
-.textContSection_5 {
-  width: 80.091388%; }
+.contetn_text_part_3 {
+  padding-top: 95px; }
+  @media only screen and (max-width: 1600px) {
+    .contetn_text_part_3 {
+      padding-top: 168px; } }
 
 /*..........seting out BG..............*/
 .blockOutimg_3 {
@@ -470,105 +520,20 @@ header {
 
 /*...... Section 6 ......*/
 #section_6 {
-  margin-top: 145px; }
-
-.img_section_6 img {
-  margin-left: -50%; }
-  @media only screen and (max-width: 1650px) {
-    .img_section_6 img {
-      margin-left: -24%; } }
-  @media only screen and (max-width: 1300px) {
-    .img_section_6 img {
-      margin-left: 0; } }
-
-/*seting prallax 4*/
-.paralas_4_p1 {
-  width: 174px;
-  position: relative; }
-  .paralas_4_p1 img {
-    position: absolute;
-    top: 5%; }
-  @media only screen and (max-width: 820px) {
-    .paralas_4_p1 {
-      display: none; } }
-
-.paralas_4_p2 {
-  width: 193px;
-  position: relative; }
-  .paralas_4_p2 img {
-    position: absolute;
-    left: 100%; }
-  @media only screen and (max-width: 820px) {
-    .paralas_4_p2 {
-      display: none; } }
-
-.textHeader_section_6 {
-  margin-top: 68px; }
-
-#shopBTN_3 {
-  font-family: "kariaBold";
-  font-size: 20.77px;
-  color: #ffffff;
-  margin-top: 21px; }
-
-.paralas_4_p3 {
-  margin-left: -27%; }
-  @media only screen and (max-width: 820px) {
-    .paralas_4_p3 {
-      display: none; } }
-
-.paralas_4_p4 {
-  margin-left: 87%; }
-  @media only screen and (max-width: 1330px) {
-    .paralas_4_p4 {
-      margin-left: 70%; } }
-  @media only screen and (max-width: 1250px) {
-    .paralas_4_p4 {
-      margin-left: 0;
-      position: absolute;
-      right: 0; } }
-  @media only screen and (max-width: 820px) {
-    .paralas_4_p4 {
-      display: none; } }
-
-/* text'sheader and text conten setings section 6*/
-.textHeader_section_6 {
-  width: 64.7377938517179%; }
-
-.textContSection_6 {
-  width: 88.0217%; }
+  margin-top: 70px; }
 
 /*...... Section 7 ......*/
-#section_7 {
-  margin-top: 17px; }
-  @media only screen and (max-width: 1199px) {
-    #section_7 {
-      margin-top: 70px; } }
-  @media only screen and (max-width: 767px) {
-    #section_7 {
-      margin-top: -100px; } }
+.contetn_text_part_4 {
+  margin-top: 163px; }
+  @media only screen and (max-width: 1600px) {
+    .contetn_text_part_4 {
+      padding-top: 95px; } }
 
-.textHeader_section_7 {
-  margin-top: 140px; }
-  @media only screen and (max-width: 1650px) {
-    .textHeader_section_7 {
-      margin-top: 212px; } }
+.content_textHeader_part_4 {
+  width: 43%; }
 
-/*text setings*/
-.textHeader_section_7 {
-  width: 48.68189806678383%; }
-
-.textContSection_7 {
-  width: 71.363796%;
-  line-height: 28px; }
-
-@media only screen and (max-width: 1650px) {
-  .img_section_7 img {
-    position: relative;
-    right: 10%; } }
-@media only screen and (max-width: 1300px) {
-  .img_section_7 img {
-    position: static; } }
+.content_text_part_4 {
+  width: 83%; }
 
 /*...... <!-- ...... paralax end out bg image ......--> ......*/
 #outIMG_4 {
@@ -632,6 +597,7 @@ header {
   height: 100%;
   background: #45b115b5;
   opacity: 0;
+  -webkit-transition: opacity 500ms ease-in-out;
   transition: opacity 500ms ease-in-out; }
 
 .img-container:hover .imgBlock_tab .overlay {
@@ -644,6 +610,7 @@ header {
     font-family: "kariaReguliar";
     font-size: 24px;
     color: #ffffff;
+    -webkit-transition: 0.5s;
     transition: 0.5s; }
   .overlay div a:nth-child(2) {
     margin-left: 9%; }
@@ -654,7 +621,8 @@ header {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   color: #fff; }
 
 /* Style the tab */
@@ -679,7 +647,6 @@ header {
   margin: 0;
   width: 100%;
   moz-transition: all .3s linear;
-  -o-transition: all .3s linear;
   -webkit-transition: all .3s linear;
   transition: all .3s linear; }
   .box p {
@@ -706,7 +673,6 @@ header {
     height: 2px;
     background: #2b9100;
     moz-transition: all .3s linear;
-    -o-transition: all .3s linear;
     -webkit-transition: all .3s linear;
     transition: all .3s linear; }
   .box:hover p > a {
@@ -737,9 +703,12 @@ header {
     margin-top: 145px;
     grid-template-columns: auto auto;
     grid-column-gap: 52px;
-    animation: animationFrames linear 1s;
-    animation-iteration-count: 1;
-    transform-origin: 50% 50%; }
+    -webkit-animation: animationFrames linear 1s;
+            animation: animationFrames linear 1s;
+    -webkit-animation-iteration-count: 1;
+            animation-iteration-count: 1;
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%; }
     @media only screen and (max-width: 1650px) {
       #testimonialBlock .block_testimonial_main {
         margin-top: 5%; } }
@@ -752,6 +721,11 @@ header {
     @media only screen and (max-width: 754px) {
       #testimonialBlock .block_testimonial_main {
         grid-template-columns: auto; } }
+@-webkit-keyframes animationFrames {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 @keyframes animationFrames {
   0% {
     opacity: 0; }
@@ -808,6 +782,7 @@ header {
       height: 64px;
       border: 4px solid #ffffff;
       border-radius: 50%;
+      -webkit-transition: all .3s linear;
       transition: all .3s linear;
       cursor: pointer; }
 
@@ -862,7 +837,6 @@ header {
       font-size: 25px;
       color: #ffffff;
       moz-transition: all .3s linear;
-      -o-transition: all .3s linear;
       -webkit-transition: all .3s linear;
       transition: all .3s linear; }
     #subscribe_section > div .socIcons a:hover {
@@ -901,7 +875,8 @@ header {
   border-radius: .50rem;
   position: absolute;
   right: 0%;
-  box-shadow: 0px 0px 13px 0px #1b1919;
+  -webkit-box-shadow: 0px 0px 13px 0px #1b1919;
+          box-shadow: 0px 0px 13px 0px #1b1919;
   font-family: "kariaitali";
   font-size: 24.11px;
   color: #ffffff;
@@ -959,6 +934,7 @@ footer {
       font-family: "kariaReguliar";
       font-size: 20px;
       color: #9ca9b1;
+      -webkit-transition: all .3s linear;
       transition: all .3s linear;
       padding: .5rem 1rem;
       padding-left: 0.1rem; }
@@ -986,8 +962,6 @@ footer {
     font-family: "kariaReguliar";
     font-size: 16px;
     color: #727f88;
-    -moz-transition: all .3s linear;
-    -o-transition: all .3s linear;
     -webkit-transition: all .3s linear;
     transition: all .3s linear;
     text-decoration: none; }
@@ -1006,6 +980,7 @@ footer {
     font-size: 2rem;
     color: #727f88;
     margin: 0 2%;
+    -webkit-transition: all .3s linear;
     transition: all .3s linear;
     display: block;
     text-align: right; }
