--- a/painogen/shop/scss/style.scss
+++ b/painogen/shop/scss/style.scss
@@ -62,180 +62,176 @@ body{
   
   
   
-  * {
-    margin: 0;
-    padding: 0; 
-  }
-
-
-
-
-  /* Icon 1 */
-  
-  #nav-icon1, #nav-icon2, #nav-icon3, #nav-icon4 {
-    border: none;
-    width: 43px;
-    outline: none;
-    height: 25px;
-   /* margin: 50px auto;*/
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .5s ease-in-out;
-    -moz-transition: .5s ease-in-out;
-    -o-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-  }
-  
-  #nav-icon1 span {
-    display: block;
-    position: absolute;
-    height: 3px;
-    width: 59%;
-    background: #5f5a58;
-    border-radius: 9px;
-    opacity: 1;
-    left: 0;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
-  }
-  
-  #nav-icon1 span:nth-child(1) {
-    top: 7px;
-  }
-  
-  #nav-icon1 span:nth-child(2) {
-    top: 13px;
-  }
-  
-  #nav-icon1 span:nth-child(3) {
-    top: 20px;
-  }
-  
-  #nav-icon1.open span:nth-child(1) {
-    top: 18px;
-    -webkit-transform: rotate(135deg);
-    -moz-transform: rotate(135deg);
-    -o-transform: rotate(135deg);
-    transform: rotate(135deg);
-  }
-  
-  #nav-icon1.open span:nth-child(2) {
-    opacity: 0;
-    left: -60px;
-  }
-  
-  #nav-icon1.open span:nth-child(3) {
-    top: 18px;
-    -webkit-transform: rotate(-135deg);
-    -moz-transform: rotate(-135deg);
-    -o-transform: rotate(-135deg);
-    transform: rotate(-135deg);
-  }
-
-  
-
-  /*my styles head*/
-
-  header {
-    border-bottom: solid 1px $color_5;
-
-    nav{
-      
-      background: #fafafa;
-    }
-  }
-
- #headNav{
-    padding-bottom: 34px;
-    padding-top: 28px;
-   
-   transition: all 1s linear;
+ * {
+  margin: 0;
+  padding: 0; 
 }
-  
-  #headMenu{
-      
-    margin-left: 3%;
-    margin-top: 18px;
-    li{
-       
-        a{
-            margin: 0;
-            padding:0;
-            padding-left: 23px;
-            padding-right: 23px;
-            @include fontsStyle($font_1,16px,#262a2c);
-            font-weight: 400;
-        }
-        a:hover {
-            color:#2b9100;
-        }
-    }
-   
+
+/* Icon 1 */
+
+#nav-icon1, #nav-icon2, #nav-icon3, #nav-icon4 {
+  border: none;
+  width: 43px;
+  outline: none;
+  height: 25px;
+ /* margin: 50px auto;*/
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+}
+
+#nav-icon1 span {
+  display: block;
+  position: absolute;
+  height: 3px;
+  width: 59%;
+  background: #5f5a58;
+  border-radius: 9px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+}
+
+#nav-icon1 span:nth-child(1) {
+  top: 7px;
+}
+
+#nav-icon1 span:nth-child(2) {
+  top: 13px;
+}
+
+#nav-icon1 span:nth-child(3) {
+  top: 20px;
+}
+
+#nav-icon1.open span:nth-child(1) {
+  top: 18px;
+  -webkit-transform: rotate(135deg);
+  -moz-transform: rotate(135deg);
+  -o-transform: rotate(135deg);
+  transform: rotate(135deg);
+}
+
+#nav-icon1.open span:nth-child(2) {
+  opacity: 0;
+  left: -60px;
+}
+
+#nav-icon1.open span:nth-child(3) {
+  top: 18px;
+  -webkit-transform: rotate(-135deg);
+  -moz-transform: rotate(-135deg);
+  -o-transform: rotate(-135deg);
+  transform: rotate(-135deg);
+}
+
+
+
+/*my styles head*/
+
+header {
+  border-bottom: solid 1px $color_5;
+
+  nav{
+    
+    background: #fafafa;
   }
+}
 
+#headNav{
+  padding-bottom: 34px;
+  padding-top: 28px;
+ 
+ transition: all 1s linear;
+}
 
-  #navbarNav_2{
-      width: 261px;
-      position: absolute;
-      right: 0;
-      @media only screen and (max-width: 1147px) {
-        
+#headMenu{
+    
+  margin-left: 3%;
+  margin-top: 0;
+  li{
+     
+      a{
+          margin: 0;
+          padding:0;
+          padding-left: 23px;
+          padding-right: 23px;
+          @include fontsStyle($font_1,16px,#262a2c);
+          font-weight: 400;
       }
-      @media only screen and (max-width: 991px) {
-        position: inherit;
+      a:hover {
+          color:#2b9100;
       }
-    li{
+  }
+ 
+}
+
+
+#navbarNav_2{
+    width: 261px;
+    position: absolute;
+    right: 5%;
+    @media only screen and (max-width: 1147px) {
       
-       
-        a{
-            margin: 0;
-            padding:0;
-            padding-left: 23px;
-            padding-right: 23px;
-            @include fontsStyle($font_1,16px,#262a2c);
-            font-weight: 400;
-            
-        }
-        a:hover {
-            color:#2b9100;
-        }
     }
+    @media only screen and (max-width: 991px) {
+      position: inherit;
+    }
+  li{
+     
+      a{
+          margin: 0;
+          padding:0;
+          padding-left: 11px;
+          padding-right: 11px;
+          @include fontsStyle($font_1,16px,#262a2c);
+          font-weight: 400;
+      }
+      a:hover {
+          color:#2b9100;
+      }
+  }
+}
+
+
+.headerIconeDiv {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  overflow: auto;
+  img{
+    display: block;
+    
+    margin: 0 auto;
+    margin-top: 30%;
+
   }
 
+  -moz-transition: all .3s linear;
+  -o-transition: all .3s linear;
+ -webkit-transition: all .3s linear;
+ transition: all .3s linear;
 
-  .headerIconeDiv {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    overflow: auto;
-    img{
-      display: block;
-      
-      margin: 0 auto;
-      margin-top: 30%;
-
-    }
-
-    -moz-transition: all .3s linear;
-    -o-transition: all .3s linear;
-   -webkit-transition: all .3s linear;
-   transition: all .3s linear;
-
-    &:hover{
-      background:$color_6;
-      box-shadow: 0px 0px 11px -2px #686161;
-    }
-
+  &:hover{
+    background:$color_6;
+    box-shadow: 0px 0px 11px -2px #686161;
   }
+
+}
+
 
   /*  ...................C O N T E N T...................*/
 
@@ -650,7 +646,7 @@ body{
 
 #filtr_by_size {
   h2{
-  @include fontsStyle($font_3, 22px, #747373);
+  @include fontsStyle($font_3, 18px, #747373);
   margin-bottom: 25px;
   }
   margin-top: 60px;
@@ -1224,11 +1220,22 @@ h2{
         margin-top: 63px;
         text-align: right;
         padding: 0;
+
+        @media only screen and (max-width: 992px) {
+          text-align: left;
+         
+        }
       }
       a:nth-child(4){
         display: block;
         text-align: right;
+
+        @media only screen and (max-width: 992px) {
+          text-align: left;
+         
+        }
       }
+      
     }
 
   .instagram_img {
@@ -1290,3 +1297,5 @@ h2{
     }
   }
 }
+
+
