--- a/painogen/shop/scss/style.css
+++ b/painogen/shop/scss/style.css
@@ -136,7 +136,7 @@ header {
 
 #headMenu {
   margin-left: 3%;
-  margin-top: 18px; }
+  margin-top: 0; }
   #headMenu li a {
     margin: 0;
     padding: 0;
@@ -152,15 +152,15 @@ header {
 #navbarNav_2 {
   width: 261px;
   position: absolute;
-  right: 0; }
+  right: 5%; }
   @media only screen and (max-width: 991px) {
     #navbarNav_2 {
       position: inherit; } }
   #navbarNav_2 li a {
     margin: 0;
     padding: 0;
-    padding-left: 23px;
-    padding-right: 23px;
+    padding-left: 11px;
+    padding-right: 11px;
     font-family: "kariaReguliar";
     font-size: 16px;
     color: #262a2c;
@@ -453,7 +453,7 @@ header {
   padding: .5rem 1rem; }
   #filtr_by_size h2 {
     font-family: "poppinsRegular";
-    font-size: 22px;
+    font-size: 18px;
     color: #747373;
     margin-bottom: 25px; }
 
@@ -834,9 +834,15 @@ footer {
     margin-top: 63px;
     text-align: right;
     padding: 0; }
+    @media only screen and (max-width: 992px) {
+      footer #instagram_block h3:nth-child(3) {
+        text-align: left; } }
   footer #instagram_block a:nth-child(4) {
     display: block;
     text-align: right; }
+    @media only screen and (max-width: 992px) {
+      footer #instagram_block a:nth-child(4) {
+        text-align: left; } }
   footer .instagram_img {
     grid-template-columns: auto auto auto;
     grid-column-gap: 0.6vw;
